# fumble

./: .env.example  .gitignore  README.md  brainstorming.md  main.py  pyproject.toml  sift.md  test-ads.md  test_assess.py  test_email.py  test_scrape.py  todo.md
doc/test-ads/: vattenfall_data-scientist.md
docs/: embedding-classifier-spec.md  pipeline.md  roadmap.md
fumble/: assess.py  cli.py  dashboard.py  dashboard_cli.py  email_fetch.py  extract.py  llm.py  scrape.py  settings_page.py  store.py
resources/: sources.toml
scripts/: compare_extraction.py
sift/: assess.py  dashboard.py  email_fetch.py  extract.py  llm.py  scrape.py  store.py
